--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@ body {
     border-radius: 25px;
     box-shadow: 0 25px 50px rgba(0,0,0,0.3);
     text-align: center;
-    position: relative;
 }
 
 h1 {
     color: #ff4d6d;
+    margin-bottom: 10px;
+}
+
+h2 {
+    margin-top: 0;
 }
 
 .buttons {
@@ -54,21 +58,21 @@ button {
     position: absolute;
 }
 
-/* Hearts animation */
+/* Floating hearts */
 .heart {
     position: fixed;
     bottom: -20px;
     font-size: 24px;
-    animation: floatUp 6s linear infinite;
-    opacity: 0.8;
+    animation: floatUp 6s linear forwards;
+    opacity: 0.9;
 }
 
 @keyframes floatUp {
-    0% {
+    from {
         transform: translateY(0) scale(1);
         opacity: 1;
     }
-    100% {
+    to {
         transform: translateY(-110vh) scale(1.8);
         opacity: 0;
     }
@@ -84,13 +88,13 @@ button {
 
     <div class="buttons">
         <button id="yes" onclick="yesClicked()">YES 💕</button>
-        <button id="no" onmouseover="moveNo()">NO 😅</button>
+        <button id="no" onmouseover="moveNo()" ontouchstart="moveNo()">NO 😅</button>
     </div>
 </div>
 
-<!-- Background Music -->
-<audio id="music" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+<!-- Local background music -->
+<audio id="music" preload="auto">
+    <source src="love.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -107,7 +111,10 @@ function moveNo() {
 
 function yesClicked() {
     document.getElementById("no").style.display = "none";
-    document.getElementById("music").play();
+
+    const music = document.getElementById("music");
+    music.currentTime = 0;
+    music.play();
 
     document.body.innerHTML = `
         <div style="
@@ -134,15 +141,13 @@ function yesClicked() {
 
 function createHeart() {
     const heart = document.createElement("div");
-    heart.classList.add("heart");
+    heart.className = "heart";
     heart.innerHTML = "❤️";
     heart.style.left = Math.random() * 100 + "vw";
     heart.style.fontSize = Math.random() * 20 + 20 + "px";
     document.body.appendChild(heart);
 
-    setTimeout(() => {
-        heart.remove();
-    }, 6000);
+    setTimeout(() => heart.remove(), 6000);
 }
 </script>
 
